# IDCC_SkineticDriver

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: audio_file.cmake  mpeg_ref_software.cmake  port_audio.cmake
source/: MPEG_Haptic_SKINETICDRIVER.cpp  MPEG_Haptic_SKINETICDRIVER.h  utils.h
